# Geometry-Visualization-Library

./: .gitignore  CMakeLists.txt  README  geom-visualization.pro
examples/: CMakeLists.txt
examples/convex_hull/: CMakeLists.txt  graham_hull.cpp
examples/operations/: CMakeLists.txt  triangle_contains_point.cpp
headers/: type_aliases.h
headers/cg/io/: range.h  rectangle.h
headers/cg/primitives/: contour.h  segment.h  vector.h
headers/common/: range.h
headers/geom/primitives/: contour.h  point.h  range.h  rectangle.h  segment.h  vector.h
headers/io/: point.h  range.h  rectangle.h  segment.h  vector.h
headers/visualization/: draw_util.h  viewer.h  viewer_adapter.h
include/cg/convex_hull/: graham.h
include/cg/io/: vector.h
include/cg/operations/: orientation.h
include/cg/operations/contains/: segment_point.h  triangle_point.h
include/cg/operations/has_intersection/: rectangle_segment.h  segment_segment.h  triangle_segment.h
include/cg/primitives/: contour.h  point.h  range.h  rectangle.h  segment.h  triangle.h  vector.h
include/misc/: random_utils.h
src/: stdafx.h
src/io/: primitives.cpp
src/visualization/: draw_util.cpp  drawer_impl.cpp  drawer_impl.h  main_window.cpp  main_window.h  printer_impl.cpp  printer_impl.h  visualization.cpp
tests/: CMakeLists.txt  contains.cpp  convex_hull.cpp  has_intersection.cpp  orientation.cpp  random_utils.h
